<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@drawable/wpg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/wpg3" />

    <TextView
        android:id="@+id/hoursOfOperationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="23dp"
        android:text="@string/hours_operationLabel"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/hoursOfOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="43dp"
        android:text="@string/hours_operation"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/contactInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/phoneNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:text="@string/address_info"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        android:text="@string/phone_info"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/emailInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contactInfo"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/contactInfo"
        android:layout_marginBottom="15dp"
        android:text="@string/email_info"
        android:textColor="@android:color/black" />

</RelativeLayout>